refactor(Navigation): replace button content with logo and simplify styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Mafqood_pin.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://mafqood.ae/">
     <meta property="og:title" content="Mafqood - Dubai's AI-Powered Lost & Found Platform">
     <meta property="og:description" content="Lost something in Dubai? Upload a photo and let AI find matches across the city. Privacy-first, bilingual (EN/AR), citywide coverage.">
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
+    <meta property="og:image" content="/logo.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="en_AE">
@@ -32,7 +32,7 @@
     <meta name="twitter:url" content="https://mafqood.ae/">
     <meta name="twitter:title" content="Mafqood - Dubai's AI-Powered Lost & Found">
     <meta name="twitter:description" content="Lost something in Dubai? Upload a photo and let AI find matches. Privacy-first, bilingual, citywide.">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
+    <meta name="twitter:image" content="/logo.svg">
     <meta name="twitter:creator" content="@MafqoodDubai">
     
     <!-- Additional Meta Tags -->
