Add robots.txt, sitemap.xml, and terms of service page; update HomeView with legal links
- Created robots.txt to guide search engine indexing for the Mafqood platform.
- Added sitemap.xml to improve site navigation and SEO.
- Implemented terms of service page in both English and Arabic, detailing user responsibilities and platform usage.
- Updated HomeView component to include links to the privacy policy, terms of service, and contact information in both languages.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://mafqood.ae/">
+    <meta property="og:url" content="https://mafqood.albaraaalolabi.dev/">
     <meta property="og:title" content="Mafqood - Dubai's AI-Powered Lost & Found Platform">
     <meta property="og:description" content="Lost something in Dubai? Upload a photo and let AI find matches across the city. Privacy-first, bilingual (EN/AR), citywide coverage.">
     <meta property="og:image" content="/logo.svg">
@@ -29,7 +29,7 @@
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://mafqood.ae/">
+    <meta name="twitter:url" content="https://mafqood.albaraaalolabi.dev/">
     <meta name="twitter:title" content="Mafqood - Dubai's AI-Powered Lost & Found">
     <meta name="twitter:description" content="Lost something in Dubai? Upload a photo and let AI find matches. Privacy-first, bilingual, citywide.">
     <meta name="twitter:image" content="/logo.svg">
